# Summer-2015-kits

./: .gitignore  4gmodeminit  4gstartercore  Dockerfile  Readme.md  THIRD-PARTY.txt  VZ20M.sh  config.json  docker-compose.yml  install.sh  modeminit.lua  script.fex
Core/: CMakeCache.txt  CMakeLists.txt  Config.cpp  Config.hpp  CoreMessageHandler.cpp  CoreMessageHandler.hpp  IResult.hpp  JSONMessage.cpp  JSONMessage.hpp  JSONResult.hpp  LogTag.hpp  Logger.cpp  Logger.hpp  LuaModule.cpp  LuaModule.hpp  LuaResult.hpp  LuaStateControl.cpp  LuaStateControl.hpp  Makefile  PerfCounter.cpp  PerfCounter.hpp  SSLSocketClient.cpp  SSLSocketClient.hpp  SocketBase.cpp  SocketBase.hpp  SocketResult.hpp  SocketServer.cpp  SocketServer.hpp  StreamZCoreRespawn.sh  cmake_install.cmake  install_manifest.txt  main.cpp  main.hpp
Core/LibBase64/: base64.cpp
Core/modules/: commandline.lua  filetransfer.lua  modemReconnect.lua  status.lua  streaming.lua
Licenses/: base64.txt  lua.txt  nopoll.txt
board configuration/root/: lte.sh
modem configuration/root/: modemInit.sh
modules/: commandline.lua  filetransfer.lua  modemReconnect.lua  status.lua  update.lua
